version/0.30/_sources/api/solver/_autosummary/settings/playback.rst.txt
:orphan:

.. _playback:

playback
========

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.playback
    :show-inheritance:

.. rubric:: Attributes

============================================   ===========================================================

Attribute                                                                                          Summary

============================================   ===========================================================
:ref:`set_custom_frames <set_custom_frames>`       Custom frames start, end, skip frames for video export.

:ref:`video <video_1>`                                                                      'video' child.

:ref:`current_animation <current_animation>`                                   Animation sequence to play.

============================================   ===========================================================

.. rubric:: Methods

================================================   =========================================================================

Method                                                                                                               Summary

================================================   =========================================================================
:ref:`read_animation_file <read_animation_file>`                 Read new animation from file or already-defined animations.

:ref:`write_animation <write_animation>`                                               Write animation sequence to the file.

:ref:`stored_view <stored_view>`                       Play the 3D animation sequence using the view stored in the sequence.

:ref:`delete <delete_6>`                                                                          Delete animation sequence.

:ref:`play <play>`                                                                              Play the selected animation.

================================================   =========================================================================

.. rubric:: Included in:

==============================   =======================

Parent                                           Summary

==============================   =======================
:ref:`animations <animations>`       'animations' child.

==============================   =======================

